--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -7,4 +7,6 @@ jobs:
       - name: print greeting
         run: echo "Hello World!"
       - name: Print goodbye
-        run: echo "Done - Bye!"
+        run: |
+          echo "Done - Bye!"
+          echo "come again!"
